--- a/src/platform/common/header/bio/index.css
+++ b/src/platform/common/header/bio/index.css
@@ -1,10 +1,11 @@
 .content {
     width           : 80vw;
-    background-color: #F0F4F0;
+    background-color: #282C34;
     display         : flex;
     flex-direction  : row;
     justify-content : space-between;
     padding         : 20px;
+    margin-top      : 8px;
 }
 
 .name {
@@ -13,6 +14,7 @@
     font-weight: bold;
     font-size  : 35px;
     align-items: flex-end;
+    color      : white;
 }
 
 .infos {
@@ -20,4 +22,5 @@
     flex           : 3;
     flex-direction : row;
     justify-content: space-between;
+    color          : white;
 }
