--- a/src/platform/common/header/bio/index.css
+++ b/src/platform/common/header/bio/index.css
@@ -6,6 +6,7 @@
     justify-content : space-between;
     padding         : 20px;
     margin-top      : 8px;
+    border-radius   : 5px;
 }
 
 .name {
